Fix: Alert, book detail, book item text & image wrap issues

--- a/src/app/books/book-detail/book-detail.component.css
+++ b/src/app/books/book-detail/book-detail.component.css
@@ -31,6 +31,7 @@
 /* ===== Info ===== */
 .detail-container .data-box {
     background-color: var(--primary-color);
+    overflow-wrap: break-word;
 }
 
 .detail-container .data-box label {
