--- a/src/app/books/book-item/book-item.component.css
+++ b/src/app/books/book-item/book-item.component.css
@@ -24,7 +24,7 @@
 /* ===== Book image ===== */
 div .book-image.grid-style {
     overflow: hidden;
-    aspect-ratio: 128/181;
+    aspect-ratio: 128/178;
 }
 
 div .book-image.list-style {
